# Canvas

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/editor/: convertor.cpp  convertor.h  eventhandler.cpp  eventhandler.h
libs/editor/core/: constant.cpp  constant.h  context.cpp  context.h  def.h  grid.cpp  grid.h  length.cpp  length.h  point.h
libs/editor/dialogs/: mainwindow.cpp  mainwindow.h
libs/editor/fsm/: editorfsm.cpp  editorfsm.h  editorstate.cpp  editorstate.h  editorstate_cgal_test.cpp  editorstate_cgal_test.h  editorstate_circle.cpp  editorstate_circle.h  editorstate_dig_circle.h  editorstate_dig_polygon.h  editorstate_dig_rect.h  editorstate_op_circle.h  editorstate_op_polygon.h  editorstate_op_rect.h  editorstate_polygon.cpp  editorstate_polygon.h  editorstate_rect.h  editorstate_select.cpp  editorstate_select.h  eventhandler.cpp
libs/editor/graphics/: graphicsarcitem.cpp  graphicsarcitem.h  graphicsscene.cpp  graphicsscene.h  graphicsshapeitem.cpp  graphicsshapeitem.h  graphicsview.cpp  graphicsview.h
libs/editor/logic/: polygon_shape_logic.cpp  polygon_shape_logic.h
libs/editor/tools/: convertor.cpp  convertor.h  timer.cpp  timer.h
